# screen_animator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  mypy.ini  pyproject.toml  pytest.ini  tox.ini
example/: inputs.toml  script.py
src/ascii_art/: converter.py
src/example_inputs/: inputs.toml
src/screen_animator/: __init__.py  __main__.py  controller.py  image_loading.py  item_groups.py  items.py  listener.py  log_setup.py  model.py  observers.py  sa.py  screen_animator.py  settings.py  speed_changer.py  view.py
src/screen_animator/example/: inputs_1.toml  inputs_2.toml  inputs_3.toml  inputs_all.toml
tests/: conftest.py  test_screen_animator.py
tests/screen_animator/: test___init__.py  test_controller.py  test_image_loading.py  test_item_groups.py  test_items.py  test_model.py  test_observers.py  test_settings.py  test_speed_changer.py
