[project]
name = "screen_animator"
version = "0.11.0a1"
description = "Python package to generate animated messages and images on a screen, with a focus on the Raspberry Pi."
license = { file = "LICENSE" }
authors = [
    { name="Dave Anscombe", email="dave.anski@gmail.com" },
]
readme = "README.md"
repository = "https://github.com/Anski-D/screen_animator"
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.7.1",
    "numpy>=2.1.2",
    "pygame-ce>=2.5.1",
    "svgutils>=0.3.4",
    "tomli>=2.0.2; python_version<'3.11'"
]

[project.scripts]
screen_animator = "screen_animator:main"
copy_examples = "screen_animator:copy_examples"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.1",
    "pre-commit>=4.0.1",
    "pylint>=3.3.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "tox>=4.21.2",
]
