[project]
name = "screen_animator"
version = "0.13.1"
description = "Python app to generate animated messages and images on a screen, with a focus on the Raspberry Pi."
license = { file = "LICENSE" }
authors = [
    { name="Dave Anscombe", email="dave.anski@gmail.com" },
]
readme = "README.md"
repository = "https://github.com/Anski-D/screen_animator"
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.7.1",
    "mergedeep>=1.3.4",
    "numpy>=2.1.2",
    "pygame-ce>=2.5.1",
    "svgutils>=0.3.4",
    "tomli>=2.0.2; python_version<'3.11'",
]

[project.scripts]
screen_animator = "screen_animator:main"
copy_examples = "screen_animator:copy_examples"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.9.2",
    "tox>=4.21.2",
]
test = [
    "pytest-cov>=5.0.0",
    "pytest-sugar>=1.0.0",
    "pytest>=8.3.3",
]
